@@ -10,6 +10,8 @@ What's New in Python 3.7.0 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #12844: More than 255 arguments can now be passed to a function.
+
 - Issue #28782: Fix a bug in the implementation ``yield from`` when checking
   if the next instruction is YIELD_FROM. Regression introduced by WORDCODE
   (issue #26647).
